test/end-to-end/compile-errors/modifier-duplicate-or-redundant.crow
main void()
	()

f void() bare, bare, c extern, d extern

nat64 builtin data

e extern mut

ee extern extern

en enum data

f flags data

r record data

u union data
	r

uv union by-val
	r

dd extern data, data

mm record mut, mut

ss record shared, shared

rr record by-ref, by-ref

vv record by-val, by-val

g global(nat) c extern, d extern

data spec builtin, builtin
